Remove proxy configuration and implement direct API calls from React frontend to Spring Boot backend by configuring CORS globally in Spring Boot.
Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 4174f45b-c0e8-4b0d-bb41-db8a7f3d96b3
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/76a0e327-53c8-4699-869e-dd58b97a96cc/6f557729-ff7d-462e-b619-49af80ca4813.jpg